tests/ui/statics/static-in-method-cannot-use-self.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/static-in-method-cannot-use-self.rs:12:35
   |
LL |         static childVal: Box<P> = self.child.get();
   |                                   ^^^^ non-constant value
   |
help: consider using `let` instead of `static`
   |
LL -         static childVal: Box<P> = self.child.get();
LL +         let childVal: Box<P> = self.child.get();
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0435`.
